fixed mathjax/menu z-index issue

--- a/css/menu.css
+++ b/css/menu.css
@@ -2,6 +2,7 @@ div.menu-container{
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
 }
 
 ul.menu{
